--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+
 }
 
 .clearfix::after {
@@ -80,7 +80,7 @@ body {
     color: #EB4D4D;
     top: -7px;
     right: 10px;
-    
+
 }
 
 .player-current-box {
@@ -149,6 +149,61 @@ i {
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
+.dice-2
+{
+  top: 286px;
+}
+
+.radio-wrapper
+{
+  position: absolute;
+  top: 200px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.radio-wrapper.second
+{
+  top: 240px;
+}
+
+.radio
+{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.radio-label
+{
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+.user-score
+{
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px;
+  border: 1px solid #333;
+  width: 120px;
+  text-align: center;
+}
+.btn-score
+{
+  position: absolute;
+  top: 130px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: 0px;
+  background-color: #EB4D4D;
+  width: 120px;
+  padding: 10px 0;
+  color: #fff;
+  font-size: 14px;
+}
